--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,11 @@
+/*
+dark purple - #5302c1
+light purple - #7519F3
+dark blue - #0242C1
+light blue - #0651E6
+
+*/
+
 :root {
 
     --background: rgb(246, 245, 242);
@@ -146,8 +154,13 @@ body {
 }
 
 @keyframes slideIn {
-    0% { transform: translateY(-100%); }
-    100% { transform: translateY(0); }
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
 }
 
 .header .container,
@@ -244,6 +257,24 @@ body {
 .navbar-link {
     font-weight: 700;
     padding-block: 6px;
+}
+
+.logo {
+    display: flex;
+}
+
+.title {
+    font-size: 2.4rem;
+    padding-inline-start: 12px;
+    color: #0242C1;
+    font-family: "Manrope";
+    font-weight: 600;
+    display: flex;
+    letter-spacing: -1px;
+}
+
+.purple {
+    color: #5302c1;
 }
 
 .hero {
@@ -378,6 +409,260 @@ body {
     gap: 12px;
 }
 
+
+.c-timeline__item {
+    position: relative;
+    display: flex;
+    gap: 3.5rem;
+    /* outline: solid 1px; */
+
+    &:last-child {
+        .c-timeline__content {
+            &:before {
+                display: none;
+            }
+        }
+    }
+}
+
+.c-timeline__content {
+    flex: 1;
+    position: relative;
+    order: 1;
+    padding-left: 3.5rem;
+    padding-bottom: 3rem;
+
+    &:before {
+        content: "";
+        position: absolute;
+        right: 100%;
+        top: 5px;
+        height: 100%;
+        width: 2px;
+        background-color: lightgrey;
+    }
+
+    &:after {
+        content: "";
+        position: absolute;
+        left: calc(0px - 11px);
+        top: 5px;
+        width: 20px;
+        height: 20px;
+        background-color: #fff;
+        z-index: 1;
+        border: 2px solid lightgrey;
+        border-radius: 50%;
+        background-color: #a07cc5;
+    }
+}
+
+.c-timeline__title {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    cursor: pointer;
+}
+
+.c-timeline__desc {
+    color: grey;
+}
+
+time {
+    text-align: end;
+    flex: 0 0 150px;
+    min-width: 0;
+    overflow-wrap: break-word;
+    padding-bottom: 1rem;
+}
+
+/*** Non-demo CSS ***/
+
+ul.cloud {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    line-height: 2.75rem;
+    width: 450px;
+}
+
+ul.cloud a {
+    /*   
+    Not supported by any browser at the moment :(
+    --size: attr(data-weight number); 
+    */
+    --size: 4;
+    --color: #a33;
+    color: var(--color);
+    font-size: calc(var(--size) * 0.25rem + 0.5rem);
+    display: block;
+    padding: 0.125rem 0.25rem;
+    position: relative;
+    text-decoration: none;
+    /* 
+    For different tones of a single color
+    opacity: calc((15 - (9 - var(--size))) / 15); 
+    */
+}
+
+ul.cloud a[data-weight="1"] {
+    --size: 1;
+}
+
+ul.cloud a[data-weight="2"] {
+    --size: 2;
+}
+
+ul.cloud a[data-weight="3"] {
+    --size: 3;
+}
+
+ul.cloud a[data-weight="4"] {
+    --size: 4;
+}
+
+ul.cloud a[data-weight="5"] {
+    --size: 6;
+}
+
+ul.cloud a[data-weight="6"] {
+    --size: 8;
+}
+
+ul.cloud a[data-weight="7"] {
+    --size: 10;
+}
+
+ul.cloud a[data-weight="8"] {
+    --size: 13;
+}
+
+ul.cloud a[data-weight="9"] {
+    --size: 16;
+}
+
+ul[data-show-value] a::after {
+    content: " (" attr(data-weight) ")";
+    font-size: 1rem;
+}
+
+ul.cloud li:nth-child(2n+1) a {
+    --color: #181;
+}
+
+ul.cloud li:nth-child(3n+1) a {
+    --color: #33a;
+}
+
+ul.cloud li:nth-child(4n+1) a {
+    --color: #c38;
+}
+
+ul.cloud a:focus {
+    outline: 1px dashed;
+}
+
+ul.cloud a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 0;
+    height: 100%;
+    background: var(--color);
+    transform: translate(-50%, 0);
+    opacity: 0.15;
+    transition: width 0.25s;
+}
+
+ul.cloud a:focus::before,
+ul.cloud a:hover::before {
+    width: 100%;
+}
+
+.about .wrapper, .exp .wrapper {
+    display: grid;
+    gap: 50px;
+}
+
+.tagcloud {    
+    font-size: 2rem;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    color: var(--black-coral);
+}
+
+.tagcloud--item:hover {
+    color: var(--white);
+    cursor: pointer;
+    background-color: var(--pink);
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.section.about {
+    border-block: 1px solid var(--cadet-blue-crayola_a20);
+}
+
+.blue {
+    background-color: #f1f5fd;
+}
+
+.green {
+    background-color: #f5faf7;
+}
+
+.red {
+    background-color: #fcf4f6;
+}
+
+.card-title {
+    padding: 10px 20px;
+    border-bottom: 1px solid var(--cadet-blue-crayola_a20);
+}
+
+.exp_details {
+    padding: 20px 30px;
+}
+
+.timeline {
+    float: right;
+}
+
+.exp_details p {
+    padding: 10px 0;
+    text-align: justify;
+}
+
+.exp_details p.bg-title {
+    font-weight: 700;
+    display: grid;
+    grid-template-columns: minmax(10px, 1fr) 11fr;
+    align-items: center;
+    padding-bottom: 0;
+}
+
+.icon-img {
+    width: 30px;
+}
+
+.list {
+    margin: 10px 0 0 20px;
+}
+
+.list li {
+    list-style: square;
+}
+
+@media (prefers-reduced-motion) {
+    ul.cloud * {
+        transition: none !important;
+    }
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .container {
@@ -401,6 +686,10 @@ body {
     .container {
         max-width: 720px;
     }
+
+    .section-text {
+        --fs-5: 2rem;
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -419,6 +708,7 @@ body {
         left: 0;
         max-width: unset;
         border-radius: 0;
+        z-index: 999;
     }
 
     .nav-open-btn,
@@ -477,6 +767,11 @@ body {
     .hero .btn-wrapper {
         justify-content: flex-start;
     }
+
+    .about .wrapper, .exp .wrapper {
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+    }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -502,6 +797,10 @@ body {
 
     .hero .section-text {
         --fs-5: 2.4rem;
+    }
+
+    .about .wrapper, .exp .wrapper {
+        gap: 100px; 
     }
 
 }
