added contact me form

--- a/static/styles.css
+++ b/static/styles.css
@@ -582,12 +582,13 @@ ul.cloud a:hover::before {
     width: 100%;
 }
 
-.about .wrapper, .exp .wrapper {
+.about .wrapper,
+.exp .wrapper {
     display: grid;
     gap: 50px;
 }
 
-.tagcloud {    
+.tagcloud {
     font-size: 2rem;
     margin: auto;
     width: 100%;
@@ -645,6 +646,10 @@ ul.cloud a:hover::before {
     padding-bottom: 0;
 }
 
+.exp {
+    border-bottom: 1px solid var(--cadet-blue-crayola_a20);
+}
+
 .icon-img {
     width: 30px;
 }
@@ -656,6 +661,47 @@ ul.cloud a:hover::before {
 .list li {
     list-style: square;
 }
+
+.contact {
+    padding-block-end: 0;
+}
+
+.contact-card {
+    background-color: var(--snow);
+    padding: 32px;
+    border-radius: var(--radius-8);
+    display: grid;
+    gap: 40px;
+}
+
+.contact .section-title {
+    margin-block-start: 20px;
+}
+
+.input-field {
+    background-color: var(--white);
+    color: var(--black-coral);
+    font-size: var(--fs-7);
+    padding: 14px 18px;
+    border-radius: var(--radius-6);
+    outline: none;
+    margin-block-end: 20px;
+}
+
+.input-field::placeholder {
+    color: var(--manatee);
+}
+
+textarea.input-field {
+    min-height: 120px;
+    height: 120px;
+    max-height: 240px;
+    resize: vertical;
+}
+
+.footer { padding-block: 40px; }
+
+.copyright { margin-block-end: 12px; }
 
 @media (prefers-reduced-motion) {
     ul.cloud * {
@@ -670,6 +716,10 @@ ul.cloud a:hover::before {
         width: 100%;
         margin-inline: auto;
     }
+
+    .contact-card {
+        padding: 68px;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -678,6 +728,10 @@ ul.cloud a:hover::before {
         max-width: 540px;
         width: 100%;
         margin-inline: auto;
+    }
+
+    .contact-card {
+        padding: 68px;
     }
 }
 
@@ -689,6 +743,16 @@ ul.cloud a:hover::before {
 
     .section-text {
         --fs-5: 2rem;
+    }
+
+    .contact .section-text {
+        --fs-5: 1.8rem;
+    }
+
+    .input-wrapper {
+        display: flex;
+        align-items: center;
+        gap: 20px;
     }
 }
 
@@ -768,9 +832,16 @@ ul.cloud a:hover::before {
         justify-content: flex-start;
     }
 
-    .about .wrapper, .exp .wrapper {
+    .about .wrapper,
+    .exp .wrapper {
         grid-template-columns: 1fr 1fr;
         align-items: center;
+    }
+
+    .contact-card {
+        grid-template-columns: 0.8fr 1fr;
+        align-items: center;
+        gap: 90px;
     }
 }
 
@@ -799,8 +870,13 @@ ul.cloud a:hover::before {
         --fs-5: 2.4rem;
     }
 
-    .about .wrapper, .exp .wrapper {
-        gap: 100px; 
+    .about .wrapper,
+    .exp .wrapper {
+        gap: 100px;
+    }
+
+    .contact-card {
+        gap: 150px;
     }
 
 }
